# Hawata

./: .gitignore  .ninja_deps  .ninja_log  Arduino_Temperature_Control_Sketch.ino  CMakeCache.txt.prev  CMakeLists.txt  Docking.cpp  Docking.h  ForgotPassword.cpp  IMPLEMENTATION_SUMMARY.md  PRODUCT_CRUD_SETUP.md  QUICK_REFERENCE.md  README.md  TEMPERATURE_CONTROL_IMPLEMENTATION.md  WebEngineWidgets.json  appwindow.cpp  appwindow.h  appwindow.ui  appwindow.ui.autosave  arduino.cpp  arduino.h  boat.cpp  boat.h  boatmap.qml  boats.cpp  boats.h  build.ninja  build_log.txt  build_log2.txt  chatbot.ui  chatbotdialog.cpp  chatbotdialog.h  chatbotdialog.ui  cmake_install.cmake  company.cpp  company.h  connection.cpp  connection.h  createacc.cpp  createacc.h  (+28 more)
.cmake/api/v1/reply/: cache-v2-311669645765107881b2.json  codemodel-v2-2910e07e35f45bd3b9fd.json  directory-.-Debug-c1fa884b5213d0e238ea.json  index-2026-02-28T09-19-36-0755.json  target-Sign_up-Debug-21a5cad1221355775f90.json  target-Sign_up_autogen-Debug-32934cd68785995ba20c.json
.cmake/api/v1/reply.prev/: cmakeFiles-v1-fe72649563913d972c85.json  codemodel-v2-10303802fdddf371335b.json  codemodel-v2-a643a21f2c539f0572f3.json  directory-.-Debug-c5cc95c4822c911dde74.json  index-2026-02-28T08-45-32-0847.json  index-2026-02-28T08-48-58-0296.json  target-Sign_up-Debug-001318e701ef367cb149.json  target-Sign_up-Debug-2d17748a29767165215d.json  target-Sign_up_autogen_timestamp_deps-Debug-0d25811859fc81e96b57.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: Docking.h.2504C2F760413037.idx  QList.B356F4AFC6410F6B.idx  QModelIndex.1870AFB16BB29E10.idx  QPageLayout.8548C5C2F8F70545.idx  appwindow.cpp.E22F375A5D000ACF.idx  appwindow.h.2ABF34DFE95A8200.idx  boats.cpp.BF5334ED4E8ED369.idx  boats.h.F60F5E8682D67328.idx  company.cpp.87F3489AFF4BD1D0.idx  company.h.9E0DFBA81CF9BEFC.idx  connection.cpp.BCEE3B091C387458.idx  main.cpp.B81462EA460C479A.idx  mainwindow.cpp.70C0661CFC3862CD.idx  mainwindow.h.20BD5330DC297EB6.idx  product.cpp.B79BFCE9FD738895.idx  product.h.2A371EFA2E7318E3.idx  qabstractitemview.h.032A490E0FE14F60.idx  qabstractseries.h.5C567246D93365B8.idx  qcalendar.h.8CC1326FA223BA25.idx  qcalendarwidget.h.6EABEE844D609CA9.idx  qchar.h.57098B65D0F85C54.idx  qcombobox.h.5CC17046E33EFF3B.idx  qcontiguouscache.h.D186B42D74E4657F.idx  qcoreapplication.h.F6B49D7D9AFE4348.idx  qdatastream.h.CC69300A7630206A.idx  qdockwidget.h.046538B63F62C18A.idx  qevent.h.E1CE923C8548442B.idx  qfile.h.75D9D50A725564AC.idx  qfiledialog.h.5209CF72246E2AC6.idx  qfileinfo.h.57E9F7F5A840F1A3.idx  qframe.h.236BEB16A4131370.idx  qgraphicslayoutitem.h.8182A7A014E6031B.idx  qgraphicswidget.h.A5E02E6D155F5D94.idx  qiodevice.h.E4B9EB66038E9784.idx  qlayout.h.CA42BD093DF2B306.idx  qlayoutitem.h.78B250724DF3001F.idx  qlegend.h.E870E2A66BFECF6A.idx  qmath.h.26C7B17DB487CCC7.idx  qmenu.h.DCDE8095C62F948B.idx  qmetatype.h.64FA0E07794C4C35.idx  (+26 more)
.qtcreator/: CMakeLists.txt.user.0affd1c
Sign_up_autogen/: deps  moc_predefs.h
Sign_up_autogen/EWIEGA46WW/: moc_appwindow.cpp  moc_appwindow.cpp.d  moc_createacc.cpp  moc_createacc.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
Sign_up_autogen/include/: ui_appwindow.h
icons/: HOW_TO_SETTUP.txt
